# sono-eval

./: .commitlintrc.yml  .cursorignore  .cursorrules  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  AGENT_KNOWLEDGE_BASE.md  ASSESSMENT_SUMMARY.md  BETA_REQUIREMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_2026-01-16.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DOCKER_BUILD_TROUBLESHOOTING.md  DOCUMENTATION_REVISION_2026-01-21.md  Dockerfile  EXECUTIVE_SUMMARY_UX_ENHANCEMENTS.md  FIX_NOT_FOUND.md  FIX_PORT_ALLOCATION.md  GEMINI.md  GLOSSARY.md  IMPLEMENTATION_GUIDE_AREA1_DOCUMENTATION.md  IMPLEMENTATION_GUIDE_AREA2_ONBOARDING.md  IMPLEMENTATION_GUIDE_AREA3_ERROR_RECOVERY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_ROADMAP.md  LICENSE  Makefile  PREVIEW.md  PRODUCTION_HARDENING_SUMMARY.md  PUBLIC_READINESS_REPORT.md  (+23 more)
.agent/workflows/: markdown-tables.md  organize-docs.md  pre-commit-checklist.md  pre-task.md  standardize-linting.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  dependabot.yml  labels.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  deploy.yml  label-sync.yml  security.yml
.serena/: project.yml
.serena/memories/: code_style.md  completion_checklist.md  project_overview.md  structure.md  suggested_commands.md
Documentation/: DOCUMENTATION_INDEX.md  NAVIGATION.md  OPERATIONS_GUIDE.md  PRODUCTION_DEPLOYMENT.md  README.md  REORGANIZATION_SUMMARY.md  SEARCH.md  START_HERE.md
Documentation/Archive/: IMPROVEMENT_PLAN_README.md  README.md
Documentation/Archive/Legacy-Guides/: CODEX_ENV_SETUP.md
Documentation/Archive/Reports-Historical/: DARK_HORSE_MITIGATION.md  FIX_NOT_FOUND.md  IMPLEMENTATION_PLAN_1_MOBILE_UX.md  IMPLEMENTATION_PLAN_2_API_ERRORS.md  IMPLEMENTATION_PLAN_3_DOC_NAVIGATION.md  IMPROVEMENTS_REPORT_2026-01-19.md  PUBLIC_RELEASE_CHECKLIST.md  REVIEW_NAVIGATION.md  SESSION_SUMMARY_2026-01-22.md  UX_ENHANCEMENT_ANALYSIS.md
Documentation/Core/concepts/: architecture.md  glossary.md
Documentation/Core/development/: implementation.md
Documentation/Governance/: AGENTS.md  AGENT_BEHAVIORAL_STANDARDS.md  AGENT_REFORMATTING_GUIDELINES.md  CODE_OF_CONDUCT.md  DOCUMENTATION_ORGANIZATION_STANDARDS.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_ROADMAP.md  MAINTENANCE.md  ROADMAP.md
Documentation/Guides/: BETA_WELCOME.md  DOCKER_BUILD_TROUBLESHOOTING.md  PREVIEW.md  PRODUCTION_DEPLOYMENT.md  QUICK_REFERENCE.md  QUICK_START.md  READY_FOR_PREVIEW.md  SETUP_CHECKLIST.md  assessment-path-guide.md  faq.md  mobile-companion.md  troubleshooting.md
Documentation/Learning/: PORTABILITY.md  README.md
Documentation/Reports/: ASSESSMENT_SUMMARY.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_REPORT.md  DESIGN_AUDIT.md  DESIGN_AUDIT_2026.md  DESIGN_ENHANCEMENT_SUMMARY.md  EXECUTIVE_SUMMARY_UX_ENHANCEMENT.md  FINAL_REPORT.md  FIX_NOT_FOUND.md  FIX_PORT_ALLOCATION.md  IMPLEMENTATION_PLAN_1_MOBILE_UX.md  IMPLEMENTATION_PLAN_2_API_ERRORS.md  IMPLEMENTATION_PLAN_3_DOC_NAVIGATION.md  PUBLIC_READINESS_REPORT.md  README.md  REVIEW_NAVIGATION.md  SECRETS_AUDIT.md  SECURITY_AUDIT_SUMMARY.md  UX_ENHANCEMENT_ANALYSIS_2026-01-17.md
config/: Dockerfile  alembic.ini  requirements.txt
config/build-specs/: sono-eval.spec  sono_eval_full.spec
config/superset/: README.md  SUPERSET_INTEGRATION.md
config/superset/database/: __init__.py  (+1 more)
docs/: DESIGN_AUDIT.md  FINAL_REPORT.md  README.md  faq.md  mobile-companion.md  quick-start.md  troubleshooting.md
docs/resources/: candidate-guide.md
docs/user-guide/: api-reference.md  cli-reference.md  installation.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Navigation.tsx
frontend/lib/: api-client.ts  providers.tsx
frontend/types/: assessment.ts
migrations/: README.md  env.py
samples/: README.md  complex-class.py  simple-function.py  with-tests.py
scripts/: Makefile  README.md  build_standalone.py  codex-setup.sh  fix-pre-commit-ssl.sh  migrate_memu_to_redis.py  preview_demo.py  security_audit.py  standardize_repo.sh
src/sono_eval/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_api_extended.py  test_assessment.py  test_audit.py  test_auth.py  test_cache.py  test_circuit_breaker.py  test_cli.py  test_cli_assess.py  test_cli_candidate.py  test_cli_commands.py  test_config.py  test_council_scorer.py  test_dashboard.py  test_error_help.py  test_error_recovery.py  test_errors.py  test_formatters.py  test_heuristic_scorer.py  test_integration.py  test_integration_extended.py  test_logging.py  test_logging_context.py  test_memory.py  test_memory_redis.py  test_ml_model_integration.py  test_ml_scorer.py  test_ml_scorer_real.py  test_mobile.py  test_mobile_session.py  test_motive_scorer.py  test_pattern_checks.py  test_pdf_generator.py  test_rate_limiter.py  test_rate_limiting.py  test_repl.py  test_security.py  (+5 more)
tests/integration/: test_batch_api.py
tests/load/: locustfile.py
tests/performance/: locustfile.py
tests/unit/: test_pdf_export.py
(+150 files in other folders)
